--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "path": "^0.12.7"
   }
 }
