--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Arsh and Zuhaib",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
