--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
+    "twilio": "^3.77.1",
     "xlsx": "^0.18.5"
   }
 }
